--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,12 @@
 {
   "css.format.enable": true,
   "editor.formatOnSave": true,
-  "files.autoSave": "onWindowChange",
+  "files.autoSave": "off",
   "prettier.enable": true,
   "eslint.enable": true,
   "cSpell.words": [
     "aoneahsan",
+    "Btns",
     "chartjs",
     "chatbox",
     "chatbubble",
